add some practice notebooks

--- a/practice/RNN Practice.ipynb
+++ b/practice/RNN Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {
     "scrolled": true
    },
@@ -93,11 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = df['review_body'][0:5000].str.cat(sep=' ')"
+    "text = df['review_body'][0:50000].str.cat(sep=' ')"
    ]
   },
   {
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,16 +1607,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\" !#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\\\]^_`abcdefghijklmnopqrstuvwxyz~\\xa0®é\\u200b–’“”…\\uf04a🏻🐇👍😀😊😏\""
+       "'\\x10\\x1a\\x1b !\"#$%&\\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\\\]^_`abcdefghijklmnopqrstuvwxyz{}~\\xa0¨\\xad®°´½àáâéëíúłʻ\\u200b–—‘’“”•…\\u2028‼►●★☆☺☼♡♥✌✔❤\\uf04a️，：🌟🍌🏻🏼🏽🏾🏿🐇🐈🐕🐝🐩🐱🐴🐶🐹🐾👀👌👍👎💕💘💛💜💩💰🔒😀😁😂😃😄😆😉😊😋😍😎😏😐😒😔😕😖😜😞😟😠😡😣😥😧😫😬😭😳'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samp_df = df[0:5000]\n",
+    "samp_df = df[0:50000]\n",
     "idxs = get_cv_idxs(len(samp_df))\n",
     "((val_df, trn_df),) = split_by_idx(idxs, samp_df)"
    ]
@@ -1690,7 +1690,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = CharSeqStatefulLSTM(md.nt, n_fac, n_hidden, 2)\n",
+    "m = CharSeqStatefulLSTM(md.nt, n_fac, n_hidden, 2).cuda()\n",
     "lo = LayerOptimizer(optim.Adam, m, 1e-2, 1e-5)"
    ]
   },
